--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -7,7 +7,13 @@ node_modules/
 # Build output
 dist/
 build/
+.next/
 
-# IDE folders
+# Logs
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+
+# IDE
 .vscode/
 .idea/
